Merge IX
various compile errors